src/test/resources/frontendReference/invalid/semanticErr/variables/basicTypeErr09.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:11 -- Incompatible type at "a" (expected: CHAR, actual: STRING)
